apps/inbox/overlays/staging/data-credentials.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inbox
spec:
  template:
    spec:
      containers:
      - name: inbox
